--- a/bbs-frontend/src/language/locale/en_US.json
+++ b/bbs-frontend/src/language/locale/en_US.json
@@ -3,5 +3,6 @@
   "look": {
     "deep": "value of look deep"
   },
-  "changeLanguage": "changeLanguage"
+  "changeLanguage": "changeLanguage",
+  "home": "Home"
 }
