--- a/bbs-frontend/src/language/locale/en_US.json
+++ b/bbs-frontend/src/language/locale/en_US.json
@@ -3,13 +3,14 @@
   "look": {
     "deep": "value of look deep"
   },
-  "changeLanguage": "changeLanguage",
+  "changeLanguage": "中文",
   "home": "Home",
   "report": "Report",
   "manufacturers": "Manufacturers",
   "authorRanking": "Author Ranking",
   "team": "Team",
   "announcement": "Announcement",
+  "search": "Search",
   "searchTips": "Search Something",
   "login": "Login",
   "register": "Register"
