--- a/bbs-frontend/src/language/locale/zh_CN.json
+++ b/bbs-frontend/src/language/locale/zh_CN.json
@@ -14,6 +14,18 @@
   "searchTips": "搜索",
   "login": "登录",
   "register": "注册",
+  "breadcrumb": {
+    "home": "首页",
+    "report": "所有报告",
+    "detail": "报告详情",
+    "manufacturers": "厂商",
+    "authorRanking": "作者排名",
+    "team": "团队",
+    "announcement": "公告",
+    "search": "搜索",
+    "login": "登录",
+    "register": "注册"
+  },
   "commonTitle": {
     "commit": "最新提交",
     "confirm": "最新确认",
@@ -24,5 +36,12 @@
     "lv": "等级",
     "author": "作者",
     "date": "日期"
+  },
+  "ReportDetail": {
+    "abstract ": "报告摘要",
+    "lv": "等级",
+    "author": "作者",
+    "date": "日期",
+    "content": "报告内容"
   }
 }
